--- a/multiplication_app/index.html
+++ b/multiplication_app/index.html
@@ -5,6 +5,9 @@
      <link rel="stylesheet" href="./css/style.css" >
      <link rel="stylesheet" href="./css/style.css" >
      <link rel="stylesheet" href="./css/style.css" >
+     <link rel="stylesheet" href="./css/style.css" >
+     <link rel="stylesheet" href="./css/style.css" >
+     <link rel="stylesheet" href="./css/style.css" >
     </head>
     <body>
 
